--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "jest": "^29.7.0",
+    "jest-each": "^29.7.0",
     "nodemon": "^3.0.1"
   },
   "dependencies": {
